welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:8: error: not found: value die11
    return (die11+die22)
            ^withoutDoubles:8: error: not found: value die22
    return (die11+die22)
                  ^