welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
  if (noDoubles==false) {
    return (die1+die2)
  } else if ((die1==die2)) { var die11 = ((die1 + 1)%6)
                             var die22 = ((die2 + 1)%6)
    return (die11+die22)
  } else {
    return (die11+die22)
  }
}